# old_cfitsio

./: CMakeLists.txt  Makefile.in
cmake/: cfitsioConfig.cmake.in
